Render the homapage

--- a/www/templates/add_project_form.html
+++ b/www/templates/add_project_form.html
@@ -1,6 +1,4 @@
-{% load bootstrap %}
-
-{% if request.user.is_authenticated %}
+{#{% if AUTHENTIFICATED %}
   <div class="details" id="add-project">
     <h2 id="year" data-anchor="Add">???</h2>
     
@@ -39,4 +37,5 @@
     </script>
   </div>
 {% endif %}  
+#}
 
