--- a/www/templates/project.html
+++ b/www/templates/project.html
@@ -90,16 +90,16 @@
   </div>
   {% end %}#}
 
-  {#{% if AUTHENTIFICATED or len(project.downloads) > 0 %}
+  {% if AUTHENTIFICATED or len(project.downloads) > 0 %}
     <ul class="downloads" data-anchor="Download">
-    {% for down in project.downloads %}
+    {% for key, downurl in project.downloads %}
       <li>
-        <a href="/media/{{ down.down }}" target="blank_">{{ down.down }}</a>
+        <a href="/media/{{ downurl }}" target="blank_">{{ downurl }}</a>
         {#{% if request.user.is_authenticated %}
           <a data-confirm="Do you really want to delete this Download?" href="{% url projects.views.delete_download down.pk %}">
             <i class="glyphicon glyphicon-trash"></i>
           </a>
-        {% end %}#}{#
+        {% end %}#}
       </li>
     {% end %}
     {#{% if request.user.is_authenticated %}
@@ -115,7 +115,7 @@
         </form>
       </li>
     {% end %}#}
-    {#</ul>
+    </ul>
   {% end %}
   
   {#{% if request.user.is_authenticated %}
