Add basic add project form
form is not connected so it cannot be used for the moment
some fields are still missing

--- a/www/templates/add_project_form.html
+++ b/www/templates/add_project_form.html
@@ -1,4 +1,4 @@
-{#{% if AUTHENTIFICATED %}
+{% if AUTHENTIFICATED %}
   <div class="details" id="add-project">
     <h2 id="year" data-anchor="Add">???</h2>
     
@@ -11,14 +11,11 @@
       </a>
     </div>
 
-    <form method="post" class="form-horizontal" action="{% url projects.views.add_project %}">
-    {% csrf_token %}
-      <i class="glyphicon glyphicon-remove form-close"></i>
-      {{ empty_project_form|as_bootstrap }}
-      <div class="control-group"><div class="controls">
-          <button class="btn btn-primary" onclick="submit">Submit</button>
-      </div></div>
-    </form>
+	  <form method="post" class="form-horizontal" action="{{ reverse_url('add_project') }}">
+		  {% module xsrf_form_html() %}
+      {% module BootstrapForm(form=empty_project_form) %}
+		  <div class="control-group"><div class="controls"><button class="btn btn-primary" onclick="submit">Submit</button></div></div>
+	  </form>
 
     <script type="text/javascript">
     <!--
@@ -36,6 +33,5 @@
     -->
     </script>
   </div>
-{% endif %}  
-#}
+{% end %}  
 
